# warnie

./: .gitmodules  README.md
gazebo_plugins/visual_cue_plugin/: CMakeLists.txt  package.xml
gazebo_plugins/visual_cue_plugin/include/: line_helper.h  model_cue_plugin_vis.hh  spike_helper.h  spiked_visual_cue.h
gazebo_plugins/visual_cue_plugin/launch/: visual_cue_plugin.launch
gazebo_plugins/visual_cue_plugin/models/: blade.dae  cone.dae  cone_low.dae
gazebo_plugins/visual_cue_plugin/src/: line_helper.cpp  model_cue_plugin_vis.cpp  model_import_plugin.cpp  model_logger_plugin.cpp  model_pose_reset_plugin.cpp  spike_helper.cpp  spiked_visual_cue.cpp  visual_cue_plugin.cpp
gazebo_plugins/visual_cue_plugin/worlds/: visual_cue_plugin.world
warnie/: .gitignore  CMakeLists.txt  package.xml
warnie/cad_models/husky_bumper_box/: husky_bumper_box.blend  husky_bumper_box.dae
warnie/cad_models/practice_track/: blank_block.dae  blank_blockblend.blend  circle.blend  circle.blend1  turn.blend  turn.blend1  turn_block.dae
warnie/cad_models/side_step/: road_side_step.blend1
warnie/cad_models/slope_curve/: slope_curve.blend1  slope_curve_l.blend  slope_curve_l.dae  slope_curve_l.stl  slope_curve_r.blend  slope_curve_r.dae
warnie/config/: husky_teleop.rviz  pose_reset_command.txt  replay_video.rviz
warnie/data_processing_scripts/: analyze_data.py  extract_pose.sh  format_description.py  format_objects.py  format_pose.py  push_blender_vertices.py
warnie/gazebo_models/blank_block/: model.config
warnie/gazebo_models/circle_block/: model.config
warnie/gazebo_models/continuous_track_0/: model.config  model.sdf
warnie/gazebo_models/continuous_track_1/: model.config  model.sdf
warnie/gazebo_models/continuous_track_2/: model.config  model.sdf
warnie/gazebo_models/road_side/: model.config  model.sdf
warnie/gazebo_models/side_slope/: model.sdf
warnie/gazebo_models/side_slope_curve/: model.config
warnie/gazebo_models/side_slope_curve_gap/: model.sdf
warnie/gazebo_models/straight_block/: model.config  model.sdf
warnie/gazebo_models/study_track/: model.config  model.sdf
warnie/gazebo_models/study_track_block/: model.sdf
warnie/gazebo_models/study_track_block_/: model.config
warnie/gazebo_models/study_track_end_block/: model.config  model.sdf
warnie/gazebo_models/study_track_gate_block/: model.config
warnie/gazebo_models/study_track_gate_block_/: model.sdf
warnie/gazebo_models/study_track_gate_l/: model.config  model.sdf
warnie/gazebo_models/study_track_gate_m/: model.config  model.sdf
warnie/gazebo_models/study_track_gate_m_2/: model.config  model.sdf
warnie/gazebo_models/study_track_gate_r/: model.config  model.sdf
warnie/gazebo_models/study_track_platform/: model.config  model.sdf
warnie/gazebo_models/study_track_underpass/: model.config  model.sdf
warnie/gazebo_models/track_biased_0/: model.config  model.sdf
warnie/gazebo_models/track_biased_p1_0/: model.config  model.sdf
warnie/gazebo_models/track_biased_p1_1/: model.config  model.sdf
warnie/gazebo_models/track_biased_p1_2/: model.config  model.sdf
warnie/gazebo_models/track_biased_p2_0/: model.config  model.sdf
warnie/gazebo_models/track_biased_p2_1/: model.config  model.sdf
warnie/gazebo_models/track_biased_p2_2/: model.config  model.sdf
warnie/gazebo_models/track_biased_p3_0/: model.config  model.sdf
warnie/gazebo_models/track_biased_p3_1/: model.config  model.sdf
warnie/gazebo_models/track_biased_p3_2/: model.config  model.sdf
warnie/gazebo_models/track_continuous_p1_0/: model.config  (+1 more)
warnie/launch/: husky_in_world.launch  husky_road_test.launch  husky_road_test_slope.launch  husky_road_test_step.launch  husky_straight_track_world.launch  husky_vis_cue_world.launch  joystick.launch  replay_video.launch  road_test.launch  road_test_slope.launch  road_test_step.launch  straight_track_world.launch  vis_cue_world.launch
warnie/scripts/: export_models.sh  generate_tracks.sh  run_user_study.sh
warnie/src/: continuous_track_gen.cpp  gazebo_model_generator.cpp  gazebo_world_generator.cpp  single_track_generator.cpp
warnie/test/: test.txt
warnie/track_templates/: continuous_track_config.xml  continuous_track_sdf.xml  gazebo_world.xml  import_model.xml  track_list.txt  trap_list.txt
warnie/trap_lists/: trap_list_biased.txt  trap_list_biased_p1.txt  trap_list_biased_p2.txt  trap_list_biased_p3.txt  trap_list_continuous.txt  trap_list_continuous_p1.txt  trap_list_continuous_p2.txt  trap_list_continuous_p3.txt  trap_list_discrete.txt  trap_list_discrete_all.txt  trap_list_discrete_p1.txt  trap_list_discrete_p2.txt  trap_list_discrete_p3.txt
warnie/worlds/: road_test.world  road_test_cues.world  road_test_slope_cues.world  road_test_step_cues.world  straight_track.world  straight_track_hack.world  study_track.world  study_track_2.world  study_track_3.world  study_track_4_devel.world  study_track_4_devel_2.world  study_track_4_devel_3.world  study_track_4_devel_4.world  study_track_4_devel_cue_demo.world  study_track_4_devel_cue_demo_2.world  study_track_4_devel_sookie.world  study_track_4_devel_sookie_gate.world  study_track_5.world.world  study_track_5_devel_1.world  study_track_5_devel_2.world  study_track_5_devel_3.world  study_track_5_devel_4.world  study_track_5_devel_5.world  study_track_5_devel_6.world  study_track_base.world  study_track_sookie_demo.world  training_track.world  vis_cue.world  vis_cue_2.world
(+400 files in other folders)
