<?xml version="1.0"?>
<package format="2">
  <name>warnie</name>
  <version>0.0.0</version>
  <description>The warnie package</description>

  <maintainer email="robert.valner@ut.ee">robert</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>file_template_parser</build_depend>
</package>
